--- a/gpio_R_8.ipynb
+++ b/gpio_R_8.ipynb
@@ -241,7 +241,9 @@
     "os.system(\"taskset -p -c {} {}\".format(1, p_GPIOB.pid))\n",
     "\n",
     "p_server.join();\n",
-    "p_GPIOB.join();"
+    "print('Process Server with name, {}, is finished'.format(p_server.name))\n",
+    "p_GPIOB.join();\n",
+    "print('Process GPIO with name, {}, is finished'.format(p_GPIOB.name))"
    ]
   },
   {
