--- a/gpio_R_8.ipynb
+++ b/gpio_R_8.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def LED(LED_Status_pynq,_LL1, running_pynq, _LL2, _Lt0, _Lt1, Array_Change):\n",
+    "def LED(LED_Status_pynq,_LL1, running_pynq, _LL2, _Lt0, Change_pynq, _LL3, _Lt1, Array_Change):\n",
     "    global PWM_on, PWM_off, PWM_run_time, sleep_time\n",
     "    LED_Status = [0, 0, 2, 3]\n",
     "    #with _LL1:\n",
@@ -145,21 +145,25 @@
     "            else: #If received a message signaling a change:\n",
     "                with _LL1:\n",
     "                    LED_Status = LED_Status_pynq\n",
+    "                    #print('Updated Status to: ',LED_Status_pynq)\n",
+    "                    #print('Updated LED to: ',LED_Status)\n",
+    "                with _LL3:\n",
+    "                    Change_pynq.value = 0\n",
     "                with _Lt1:\n",
     "                    Array_Change = False\n",
     "            _Lt0.release() \n",
     "            #time.sleep(.0001) #no sleep time...\n",
     "        else: #Does not have _Lt0\n",
-    "            with _LL1: #check for status change\n",
-    "                if LED_Status != LED_Status_pynq:\n",
+    "            with _LL3:\n",
+    "                if Change_pynq.value == 1:\n",
     "                    with _Lt1: #if status change, force _Lt1 to change LED_Status!\n",
     "                        Array_Change = True\n",
     "            with _LL2:\n",
-    "                if running.value == 0:\n",
+    "                if running_pynq.value == 0:\n",
     "                    break\n",
     "            time.sleep(.25)\n",
     "\n",
-    "def Wait_LED(start_p, LED_Status_p, running_p, _LP0, _LP1, _LP2):\n",
+    "def Wait_LED(start_p, LED_Status_p, running_p, Change_p, _LP0, _LP1, _LP2, _LP3):\n",
     "    global sleep_time\n",
     "    print('Waiting for LED to start.')\n",
     "    threads = []\n",
@@ -173,7 +177,7 @@
     "                for i in range(2):\n",
     "                    #fork is the shared lock\n",
     "                    #i is the user (led number too)\n",
-    "                    t = threading.Thread(target=LED, args=(LED_Status_p, _LP1, running_p, _LP2, fork1, fork2, Change2Array))\n",
+    "                    t = threading.Thread(target=LED, args=(LED_Status_p, _LP1, running_p, _LP2, fork1, Change_p, _LP3,fork2,Change2Array))\n",
     "                    threads.append(t) #creates the new thread number\n",
     "                    t.start()\n",
     "                reset_gpioB()\n",
@@ -192,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_pynq_server_R(start_LED_s, LED_Status_s, running_s,_LS0,_LS1,_LS2):\n",
+    "def run_pynq_server_R(start_LED_s, LED_Status_s, running_s,Change_s,_LS0,_LS1,_LS2,_LS3):\n",
     "    global \n",
     "    sock = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
     "    sock.bind(('192.168.2.99', 12345))\n",
@@ -213,9 +217,13 @@
     "                    running_s.value = 0\n",
     "                break\n",
     "            data = list(data) #Here we convert from string into list, then update all indexes from str to int\n",
-    "            with _LS1:\n",
-    "                for i in range(4): #length of data list ALWAYS = 4, could do 'len(data)' instead though.\n",
-    "                    LED_Status_s[i] = int(data[i])\n",
+    "            if (len(data) == 4):\n",
+    "                with _LS1:\n",
+    "                    for i in range(4): #length of data list ALWAYS = 4, could do 'len(data)' instead though.\n",
+    "                        LED_Status_s[i] = int(data[i])\n",
+    "                with _LS3:\n",
+    "                    Change_s.value = 1\n",
+    "                #print('Updated List to: ',LED_Status_s)\n",
     "    print(\"Client has disconnected from Ramin's Server.\")\n"
    ]
   },
@@ -228,15 +236,17 @@
     "start_i = Value('i', 0) #SHARED!\n",
     "running_i = Value('i',1) #SHARED!\n",
     "LED_Status_i = Array('i', [1, 0, 2, 2]) #SHARED\n",
+    "Change_i = Value('i', 0) #Shared\n",
     "_L0 = Lock() #Lock0 for Start\n",
     "_L1 = Lock() #Lock1 For LED status\n",
     "_L2 = Lock() #Lock2 for running\n",
+    "_L3 = Lock() #Lock3 for Change\n",
     "\n",
-    "p_server = multiprocessing.Process(target=run_pynq_server_R,args=(start_i,LED_Status_i,running_i,_L0,_L1,_L2))\n",
+    "p_server = multiprocessing.Process(target=run_pynq_server_R,args=(start_i,LED_Status_i,running_i,Change_i,_L0,_L1,_L2,_L3))\n",
     "p_server.start()\n",
     "os.system(\"taskset -p -c {} {}\".format(0, p_server.pid))\n",
     "\n",
-    "p_GPIOB = multiprocessing.Process(target=Wait_LED,args=(start_i,LED_Status_i,running_i,_L0,_L1,_L2))\n",
+    "p_GPIOB = multiprocessing.Process(target=Wait_LED,args=(start_i,LED_Status_i,running_i,Change_i,_L0,_L1,_L2,_L3))\n",
     "p_GPIOB.start()\n",
     "os.system(\"taskset -p -c {} {}\".format(1, p_GPIOB.pid))\n",
     "\n",
@@ -323,6 +333,27 @@
     "p_server.join();\n",
     "print('Process GPIO with name, {}, is finished'.format(p_server.name))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LED_Status_s = [0, 0, 1, 0]\n",
+    "data = '1234'\n",
+    "\n",
+    "data = list(data) #Here we convert from string into list, then update all indexes from str to int\n",
+    "for i in range(4): #length of data list ALWAYS = 4, could do 'len(data)' instead though.\n",
+    "    LED_Status_s[i] = int(data[i])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
