--- a/gpio_R8.ipynb
+++ b/gpio_R8.ipynb
@@ -105,6 +105,7 @@
     "                    break\n",
     "            with _Lt1:\n",
     "                if Continue_run == 1:\n",
+    "                    print('Continue_run is 1.')\n",
     "                    if LED_Status[0] == 0: #IF OFF\n",
     "                        time.sleep(sleep_time)\n",
     "                    else: #IF ON\n",
@@ -141,6 +142,7 @@
     "                                if LED_Status[1] == 1: #If Blinking\n",
     "                                    time.sleep(sleep_time)\n",
     "                else: #continue_run = 0\n",
+    "                    print('Time to change the status of the array!')\n",
     "                    with _LL1:\n",
     "                        LED_Status = LED_Status_pynq\n",
     "                        #print('Updated Status to: ',LED_Status_pynq)\n",
@@ -148,12 +150,14 @@
     "                    with _LL3:\n",
     "                        Change_pynq.value = 0\n",
     "                    Continue_run = 1\n",
-    "                _Lt0.release() \n",
-    "                #time.sleep(.0001) #no sleep time...\n",
+    "            time.sleep(.0001)\n",
+    "            _Lt0.release() \n",
+    "            #time.sleep(.0001) #no sleep time...\n",
     "        else: #Does not have _Lt0\n",
     "            with _LL3:\n",
     "                if Change_pynq.value == 1:\n",
     "                    with _Lt1:\n",
+    "                        print('Changing Continue_run = 0')\n",
     "                        Continue_run = 0\n",
     "            with _LL2:\n",
     "                if running_pynq.value == 0:\n",
