--- a/gpio_R8.ipynb
+++ b/gpio_R8.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +103,9 @@
     "            with _LL2:\n",
     "                if running_pynq.value == 0:\n",
     "                    break\n",
-    "            with _Lt1:\n",
-    "                if Continue_run == 1:\n",
-    "                    print('Continue_run is 1.')\n",
+    "            with _LL3:\n",
+    "                if Change_pynq.value == 0:\n",
+    "                    #print('Continue_run is 1.')\n",
     "                    if LED_Status[0] == 0: #IF OFF\n",
     "                        time.sleep(sleep_time)\n",
     "                    else: #IF ON\n",
@@ -146,19 +146,12 @@
     "                    with _LL1:\n",
     "                        LED_Status = LED_Status_pynq\n",
     "                        #print('Updated Status to: ',LED_Status_pynq)\n",
-    "                        #print('Updated LED to: ',LED_Status)\n",
-    "                    with _LL3:\n",
-    "                        Change_pynq.value = 0\n",
-    "                    Continue_run = 1\n",
+    "                        print('Updated LED to: ',LED_Status)\n",
+    "                    Change_pynq.value = 0\n",
     "            time.sleep(.0001)\n",
     "            _Lt0.release() \n",
     "            #time.sleep(.0001) #no sleep time...\n",
     "        else: #Does not have _Lt0\n",
-    "            with _LL3:\n",
-    "                if Change_pynq.value == 1:\n",
-    "                    with _Lt1:\n",
-    "                        print('Changing Continue_run = 0')\n",
-    "                        Continue_run = 0\n",
     "            with _LL2:\n",
     "                if running_pynq.value == 0:\n",
     "                    break\n",
@@ -175,16 +168,9 @@
     "                fork1 = threading.Lock() #main lock for threads\n",
     "                fork2 = threading.Lock() #lock for cont_run (variable within LED())\n",
     "                cont_run = 1 #variable for above lock ^\n",
-    "                for i in range(2):\n",
-    "                    #fork is the shared lock\n",
-    "                    #i is the user (led number too)\n",
-    "                    t = threading.Thread(target=LED, args=(LED_Status_p, _LP1, running_p, _LP2, fork1, Change_p, _LP3,fork2,cont_run))\n",
-    "                    threads.append(t) #creates the new thread number\n",
-    "                    t.start()\n",
+    "                LED(LED_Status_p, _LP1, running_p, _LP2, fork1, Change_p, _LP3,fork2,cont_run)\n",
     "                reset_gpioB()\n",
-    "                for t in threads:\n",
-    "                    t.join()\n",
-    "                print('Multithreading has terminated.')\n",
+    "                print('LED Terminated!')\n",
     "                break\n",
     "        #print('waiting... ', start_p)\n",
     "        time.sleep(sleep_time)\n",
@@ -193,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,9 +215,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Waiting for LED to start.\n",
+      "Ramin's Server is waiting for a connection!\n",
+      "Connected to Ramin's Remote Server!\n",
+      "Connors now has control of Ramin's LED!\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Time to change the status of the array!\n",
+      "Updated LED to:  <SynchronizedArray wrapper for <multiprocessing.sharedctypes.c_long_Array_4 object at 0xae7cd710>>\n",
+      "Client is disconnecting from Ramin's Server.\n",
+      "Client has disconnected from Ramin's Server.\n",
+      "Process Server with name, Process-11, is finished\n",
+      "LED Terminated!\n",
+      "Process GPIO with name, Process-12, is finished\n"
+     ]
+    }
+   ],
    "source": [
     "start_i = Value('i', 0) #SHARED!\n",
     "running_i = Value('i',1) #SHARED!\n",
@@ -372,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
