--- a/WES237a_Final_Project_Code_Rev8/gpio_R8.ipynb
+++ b/WES237a_Final_Project_Code_Rev8/gpio_R8.ipynb
@@ -93,69 +93,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def LED(LED_Status_pynq,_LL1, running_pynq, _LL2, _Lt0, Change_pynq, _LL3, _Lt1, Continue_run):\n",
+    "def LED(LED_Status_pynq,_LL1, running_pynq, _LL2, Change_pynq, _LL3):\n",
     "    global PWM_on, PWM_off, PWM_run_time, sleep_time\n",
     "    LED_Status = [0,0,2,3]\n",
     "    while True:\n",
     "        #print('LED Status: ',LED_Status[:],'\\n running: ',running.value)\n",
-    "        threadlock = _Lt0.acquire(False)\n",
-    "        if threadlock == True:\n",
-    "            with _LL2:\n",
-    "                if running_pynq.value == 0:\n",
-    "                    break\n",
-    "            with _LL3:\n",
-    "                if Change_pynq.value == 0:\n",
-    "                    #print('Continue_run is 1.')\n",
-    "                    if LED_Status[0] == 0: #IF OFF\n",
-    "                        time.sleep(sleep_time)\n",
-    "                    else: #IF ON\n",
-    "                        if LED_Status[3] == 3: #full bright (NO PWM)\n",
-    "                            if LED_Status[2] == 0: #If NO PWM & Cycle Color\n",
-    "                                for i in range(1,4): #cycle write from 1 (blue), 2 (red) and 3 (green)\n",
-    "                                    write_gpioB(i,1) #turn on  LED\n",
-    "                                    time.sleep(sleep_time) #sleep with ON\n",
-    "                                    write_gpioB(i,0) #turn off LED\n",
-    "                                    if LED_Status[1] == 1: #if supposed to blink, sleep\n",
-    "                                        time.sleep(sleep_time)\n",
-    "                            else: #IF NO PWM & Solid Color\n",
-    "                                write_gpioB(LED_Status[2],1)\n",
-    "                                time.sleep(sleep_time)\n",
+    "        with _LL2:\n",
+    "            if running_pynq.value == 0:\n",
+    "                break\n",
+    "        with _LL3:\n",
+    "            if Change_pynq.value == 0:\n",
+    "                #print('Continue_run is 1.')\n",
+    "                if LED_Status[0] == 0: #IF OFF\n",
+    "                    time.sleep(sleep_time)\n",
+    "                else: #IF ON\n",
+    "                    if LED_Status[3] == 3: #full bright (NO PWM)\n",
+    "                        if LED_Status[2] == 0: #If NO PWM & Cycle Color\n",
+    "                            for i in range(1,4): #cycle write from 1 (blue), 2 (red) and 3 (green)\n",
+    "                                write_gpioB(i,1) #turn on  LED\n",
+    "                                time.sleep(sleep_time) #sleep with ON\n",
+    "                                write_gpioB(i,0) #turn off LED\n",
     "                                if LED_Status[1] == 1: #if supposed to blink, sleep\n",
-    "                                        write_gpioB(LED_Status[2],0)\n",
-    "                                        time.sleep(sleep_time)\n",
-    "                        else: #If NOT full brightness (PWM needed)\n",
-    "                            if LED_Status[2] == 0: #PWM & cycle thru colors\n",
-    "                                for i in range(1,4):\n",
-    "                                    for j in range(PWM_run_time):\n",
-    "                                        write_gpioB(i,1) #turn on LED\n",
-    "                                        time.sleep(PWM_on[LED_Status[3]]) #sleep with ON\n",
-    "                                        write_gpioB(i,0) #turn off LED\n",
-    "                                        time.sleep(PWM_off[LED_Status[3]]) #sleep with OFF\n",
-    "                                    if LED_Status[1] == 1: #If blinking\n",
-    "                                        time.sleep(sleep_time)\n",
-    "                            else:\n",
-    "                                for i in range(PWM_run_time):\n",
-    "                                    write_gpioB(LED_Status[2],1) #turn on LED\n",
-    "                                    time.sleep(PWM_on[LED_Status[3]]) #sleep with ON\n",
-    "                                    write_gpioB(LED_Status[2],0) #turn off LED\n",
-    "                                    time.sleep(PWM_off[LED_Status[3]]) #sleep with OFF\n",
-    "                                if LED_Status[1] == 1: #If Blinking\n",
     "                                    time.sleep(sleep_time)\n",
-    "                else: #continue_run = 0\n",
-    "                    print('Time to change the status of the array!')\n",
-    "                    with _LL1:\n",
-    "                        LED_Status = LED_Status_pynq\n",
-    "                        #print('Updated Status to: ',LED_Status_pynq)\n",
-    "                        print('Updated LED to: ',LED_Status)\n",
-    "                    Change_pynq.value = 0\n",
+    "                        else: #IF NO PWM & Solid Color\n",
+    "                            write_gpioB(LED_Status[2],1)\n",
+    "                            time.sleep(sleep_time)\n",
+    "                            if LED_Status[1] == 1: #if supposed to blink, sleep\n",
+    "                                    write_gpioB(LED_Status[2],0)\n",
+    "                                    time.sleep(sleep_time)\n",
+    "                    else: #If NOT full brightness (PWM needed)\n",
+    "                        if LED_Status[2] == 0: #PWM & cycle thru colors\n",
+    "                            for i in range(1,4):\n",
+    "                                for j in range(PWM_run_time):\n",
+    "                                    write_gpioB(i,1) #turn on LED\n",
+    "                                    time.sleep(PWM_on[LED_Status[3]]) #sleep with ON\n",
+    "                                    write_gpioB(i,0) #turn off LED\n",
+    "                                    time.sleep(PWM_off[LED_Status[3]]) #sleep with OFF\n",
+    "                                if LED_Status[1] == 1: #If blinking\n",
+    "                                    time.sleep(sleep_time)\n",
+    "                        else:\n",
+    "                            for i in range(PWM_run_time):\n",
+    "                                write_gpioB(LED_Status[2],1) #turn on LED\n",
+    "                                time.sleep(PWM_on[LED_Status[3]]) #sleep with ON\n",
+    "                                write_gpioB(LED_Status[2],0) #turn off LED\n",
+    "                                time.sleep(PWM_off[LED_Status[3]]) #sleep with OFF\n",
+    "                            if LED_Status[1] == 1: #If Blinking\n",
+    "                                time.sleep(sleep_time)\n",
+    "            else:\n",
+    "                print('Time to change the status of the array!')\n",
+    "                with _LL1:\n",
+    "                    LED_Status = LED_Status_pynq\n",
+    "                    #print('Updated Status to: ',LED_Status_pynq)\n",
+    "                    print('Updated LED to: ',LED_Status)\n",
+    "                Change_pynq.value = 0\n",
     "            time.sleep(.0001)\n",
-    "            _Lt0.release() \n",
     "            #time.sleep(.0001) #no sleep time...\n",
-    "        else: #Does not have _Lt0\n",
-    "            with _LL2:\n",
-    "                if running_pynq.value == 0:\n",
-    "                    break\n",
-    "            time.sleep(.25)\n",
     "\n",
     "def Wait_LED(start_p, LED_Status_p, running_p, Change_p, _LP0, _LP1, _LP2, _LP3):\n",
     "    global sleep_time\n",
@@ -165,10 +157,10 @@
     "        with _LP0: #will keep this for the remainer of the program once start_p==1\n",
     "            if start_p.value == 1:\n",
     "                print(\"Connors now has control of Ramin's LED!\")\n",
-    "                fork1 = threading.Lock() #main lock for threads\n",
-    "                fork2 = threading.Lock() #lock for cont_run (variable within LED())\n",
-    "                cont_run = 1 #variable for above lock ^\n",
-    "                LED(LED_Status_p, _LP1, running_p, _LP2, fork1, Change_p, _LP3,fork2,cont_run)\n",
+    "                #fork1 = threading.Lock() #main lock for threads\n",
+    "                #fork2 = threading.Lock() #lock for cont_run (variable within LED())\n",
+    "                #cont_run = 1 #variable for above lock ^\n",
+    "                LED(LED_Status_p, _LP1, running_p, _LP2, Change_p, _LP3)\n",
     "                reset_gpioB()\n",
     "                print('LED Terminated!')\n",
     "                break\n",
@@ -444,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
